kube/deploy/core/2-policy/kyverno/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &n kyverno
# TODO: move this into label-based system
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *n
    # allow ingress
    - fromEntities: [host, remote-node, kube-apiserver]
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *n
    - toEntities: [host, remote-node]
      toPorts:
        - ports:
            - port: '6443'
    - toEntities: [kube-apiserver]
